--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,15 @@
   crossorigin="anonymous"
 />
 
-  <title>{% block title %}{% endblock %}</title>
+  <title>{% block title %}Home{% endblock %}</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar">
+    <button 
+    class="navbar-toggler" 
+    type="button" 
+    data-toggle="collapse" 
+    data-target="#navbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbar">
@@ -31,6 +35,10 @@
       </div>
     </div>
   </nav>
+  <div class="container">
+    {% block content %}
+    {% endblock %}
+  </div>
   <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -46,9 +54,5 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script>
-      type="text/javascript"
-      src="{{ url_for ('static', filename='index.js')}}"
-    </script>
 </body>
 </html>
